--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="radio" name="radio-set"  id="st-control-3">
             <a href="#st-panel-3">Blog</a>
             <input type="radio" name="radio-set"  id="st-control-4">
-            <a href="#st-panel-4">Git@OSC</a>
+            <a href="#st-panel-4">GitHub</a>
             <input type="radio" name="radio-set"  id="st-control-5">
             <a href="#st-panel-5">Contact Me</a>
 
@@ -31,18 +31,20 @@
                 <section class="st-panel st-color" id="st-panel-2">
                     <div class="st-desc" data-icon="=CHL"></div>
                     <h3>95后前端工程师</h3>
-                    <p>Hunan university of science and technology<br/>
+                    <p>Hunan University of Science and Technology<br/>
                         The Internet of Things Engineering<br/>
                     </p>
                 </section>
                 <section class="st-panel" id="st-panel-3">
                     <div class="st-desc" data-icon="=CHL"></div>
-                    <h3 id="st-ch">Blog</h3>
-                    <p>在<a href="#">这里</a>，<br />记录学习的每一个脚印<br />感悟生活的每一份心情 </p>
+                    <a href="https://hi-hi.cn/chlblogv2/" target="_blank">
+                        <h3 id="st-ch">Blog</h3>
+                        <p>在<a href="https://hi-hi.cn/chlblogv2/">这里</a>，<br />记录学习的每一个脚印<br />感悟生活的每一份心情 </p>
+                    </a>
                 </section>
                 <section class="st-panel st-color" id="st-panel-4">
                     <div class="st-desc" data-icon="=CHL"></div>
-                    <h3><a href="http://git.oschina.net/caohuilin" target="_blank">Git@OSC</a><div id="line"></div></h3>
+                    <h3><a href="https://github.com/caohuilin" target="_blank">GitHub</a><div id="line"></div></h3>
                     <p>从 2015 年 7 月起，这里便是我的一片天地</p>
                 </section>
                 <section class="st-panel" id="st-panel-5">
@@ -51,7 +53,7 @@
                     <p>
                         Tel : 15173266529<br />
                         QQ : 1057275848<br />
-                        Mail : caohuilin9588@foxmail.com
+                        Mail : chl.2016@qq.com
                     </p>
                 </section>
             </div>
